CommentBlock visibility fixed

--- a/src/pages/Registration/Registration.module.scss
+++ b/src/pages/Registration/Registration.module.scss
@@ -22,5 +22,6 @@
 
   &:hover .avatar {
     border: 2px solid #4361ee;
+    cursor: pointer;
   }
 }
